fixed spacing for sort and user widget in mini sidebar. finished branding widget theming

--- a/dev/scss/components/_sort.scss
+++ b/dev/scss/components/_sort.scss
@@ -65,6 +65,8 @@
     .escort-placeholder {
       color: smart-scale($bg-color-top, $scale: 35%);
       outline-color: smart-scale($bg-color-top, $scale: 25%);
+      padding: $padding * 0.75;
+      height: $base-size * 0.75 !important;
     }
   }
 
